src/assets/scss/_aboutlead.scss
.about-lead {
    p {
        margin-bottom: 40px;
    }

    h2 {
        font-size: 53px;
        margin-bottom: 55px;
        text-align: center;

        @media(min-width: $tablet) {
            text-align: left;
        }
    }

    .about-lead-circle-container {
       margin-top: 80px;

       @media (min-width: $desktop) {
           padding-right: 80px;
       }
    }

    .about-lead-circle {
        width: 100%;
        height: 100%;
        border-radius: 50%;
        background-color: #0054ff;
        padding: 0 !important;
        position: relative;
        display: flex;
        justify-content: center;
        align-items: center;

        .circle-text-container {
            p {
                font-size: 21px;

                @media(min-width: $med-phone) {
                    font-size: 24px;
                }
                
                @media(min-width: $lg-phone) {
                    font-size: 27px;
                }

                @media(min-width: $small-tablet) {
                    font-size: 32px;
                }

                @media(min-width: $tablet) {
                    font-size: 21px;
                }

                @media(min-width: $tablet-landscape) {
                    font-size: 26px;
                }

                @media(min-width: $laptop) {
                    font-size: 33px;
                }
            }
        }
    }

    .two-cols {
        div:first-child {
            @media(min-width: $desktop) {
                padding-right: 100px;
            }
            margin-bottom: 0px;

            &::before {
                display: none !important;
            }
        }
    }

    .about-lead-circle-container {
        // padding-right: 80px;
        position: relative;
    }

    .circle-flag {
        position: absolute;
        top: -35px;
        left: 50%;
        transform: translateX(-50%);

        @media(min-width: $desktop) {
            left: calc(50% - 30px);
        }
    }

    .circle-text-container {
        text-align: center;
        color: white;
        padding: 0 !important;

        p {
            font-size: 34px;
        }
    }
}

